<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.main.addstory.FromAddStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarForm"
            style="@style/ToolbarTheme">

            <TextView
                android:id="@+id/formAdd"
                style="@style/ToolbarTitle"
                android:text="@string/add_new_story" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:alpha=".6"
        android:contentDescription="@string/preview_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:srcCompat="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/labelDescStory"
        style="@style/BodyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/description_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/labelDescStory"
        app:layout_constraintTop_toBottomOf="@+id/labelDescStory">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descStory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:hint="@string/input_description_story"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/labelDescStory"
            app:layout_constraintTop_toBottomOf="@+id/labelDescStory" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titleSetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_location"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/contentSetLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSetLocation"
        tools:text="@tools:sample/full_names" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cameraButton"
        style="@style/CustomFilledButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toStartOf="@+id/pickLocationButton"
        app:layout_constraintStart_toStartOf="@+id/uploadButton"
        app:srcCompat="@drawable/ic_camera" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pickLocationButton"
        style="@style/CustomFilledButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/icon_location"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="@+id/uploadButton"
        app:layout_constraintStart_toStartOf="@+id/uploadButton"
        app:srcCompat="@drawable/ic_place" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/galleryButton"
        style="@style/CustomFilledButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="@+id/uploadButton"
        app:layout_constraintStart_toEndOf="@+id/pickLocationButton"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/uploadButton"
        style="@style/CustomFilledButton"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>