<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.login.LoginActivity">

    <TextView
        android:id="@+id/labelLogin"
        style="@style/AuthTitleContent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelEmail"
        style="@style/BodyTitle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/labelInputEmail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail"
        app:startIconDrawable="@drawable/ic_email">

        <jafar.stories.customview.MyCustomEmail
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelPassword"
        style="@style/BodyTitle"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInputEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/labelInputPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <jafar.stories.customview.MyCustomPassword
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:imeOptions="actionGo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/CustomFilledButton"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:enabled="false"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInputPassword" />

    <TextView
        android:id="@+id/dividerOr"
        style="@style/BodyContent"
        android:layout_marginTop="12dp"
        android:text="@string/account"
        android:textColor="@color/onFocusColor"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/regisButton"
        style="@style/BodyTitle"
        android:layout_marginStart="8dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="@+id/dividerOr"
        app:layout_constraintStart_toEndOf="@+id/dividerOr"
        app:layout_constraintTop_toTopOf="@+id/dividerOr" />

</androidx.constraintlayout.widget.ConstraintLayout>
